--- a/index.html
+++ b/index.html
@@ -1,122 +1,141 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | FlappyBird</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="main.css" />
+
+    <!--Bootstrap-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+
+    <link rel="shortcut icon" href="./FlappyBird/TemplateData/favicon.ico" />
+    <link rel="stylesheet" href="./FlappyBird/TemplateData/style.css" />
+
+    <title>Document</title>
   </head>
   <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
+    <nav class="navbar navbar-expand-md">
+      <div class="container">
+        <a class="navbar-brand">
+          <img
+            src="./assets/logo.svg"
+            alt="logo"
+            class="img-fluid"
+            width="60px"
+            height="60px"
+          />
+        </a>
+
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-target="#main-navbar"
+          data-bs-toggle="collapse"
+          aria-controls="main-navbar"
+          aria-expanded="false"
+          aria-label="Toogle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div
+          id="main-navbar"
+          class="collapse navbar-collapse justify-content-end"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link">Home</a></li>
+            <li class="nav-item"><a class="nav-link">Game</a></li>
+            <li class="nav-item"><a class="nav-link">About</a></li>
+          </ul>
         </div>
       </div>
-      <div id="unity-warning"> </div>
-      <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">FlappyBird</div>
+    </nav>
+
+    <section id="product">
+      <div class="container-md">
+        <div class="row justify-content-between align-items-center">
+          <div class="col-md-5 text-md-start">
+            <h1 class="display-2">.NET Framework</h1>
+            <h2 class="display-5">ASP.NET</h2>
+            <p class="lead text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+              aspernatur possimus delectus maxime totam repellendus est
+              voluptate aliquam architecto excepturi?
+            </p>
+            <a href="#navbar" class="btn btn-secondary rounded-pill shadow-lg"
+              >Buy Now</a
+            >
+          </div>
+          <div class="col-md-5 text-center d-none d-md-block">
+            <img
+              src="./assets/ebook-cover.png"
+              alt="asp.net book image"
+              class="img-fluid"
+            />
+          </div>
+        </div>
       </div>
-    </div>
-    <script>
+    </section>
 
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var warningBanner = document.querySelector("#unity-warning");
+    <h1 class="label"></h1>
+    <button
+      class="btn rounded-pill btn-primary"
+      type="button"
+      onclick="displayName()"
+    >
+      Show Name
+    </button>
 
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
-      function unityShowBanner(msg, type) {
-        function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-        }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
-        updateBannerVisibility();
-      }
+    <section>
+      <div class="container">
+        <form onsubmit="evaluation(); return false;">
+          <label for="textInput">Enter Text: </label>
+          <input type="text" id="input" name="textInput" required />
+          <input type="text" id="output" name="textOutput" />
+          <button type="submit">Get Result</button>
+        </form>
+      </div>
+    </section>
 
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/FlappyBird_Default.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/FlappyBird_Default.data",
-        frameworkUrl: buildUrl + "/FlappyBird_Default.framework.js",
-        codeUrl: buildUrl + "/FlappyBird_Default.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "Eklavya",
-        productName: "FlappyBird",
-        productVersion: "0.1",
-        showBanner: unityShowBanner,
-      };
+    <section>
+      <div id="unity-container" class="unity-desktop">
+        <canvas
+          id="unity-canvas"
+          width="960"
+          height="600"
+          tabindex="-1"
+        ></canvas>
+        <div id="unity-loading-bar">
+          <div id="unity-logo"></div>
+          <div id="unity-progress-bar-empty">
+            <div id="unity-progress-bar-full"></div>
+          </div>
+        </div>
+        <div id="unity-warning"></div>
+        <div id="unity-footer">
+          <div id="unity-webgl-logo"></div>
+          <div id="unity-fullscreen-button"></div>
+          <div id="unity-build-title">FlappyBird</div>
+        </div>
+      </div>
+    </section>
 
-      // By default, Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
+    <!--Bootstrap-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
 
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
+    <!--Custom-->
+    <script src="./main.js"></script>
 
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-        container.className = "unity-mobile";
-        canvas.className = "unity-mobile";
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-
-
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
-      }
-
-      loadingBar.style.display = "block";
-
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-              }).then((unityInstance) => {
-                loadingBar.style.display = "none";
-                fullscreenButton.onclick = () => {
-                  unityInstance.SetFullscreen(1);
-                };
-              }).catch((message) => {
-                alert(message);
-              });
-            };
-
-      document.body.appendChild(script);
-
-    </script>
+    <script src="./FlappyBird/flappyBird.js"></script>
   </body>
 </html>
