flappy bird added

--- a/index.html
+++ b/index.html
@@ -103,7 +103,11 @@
       </div>
     </section>
 
-    
+    <div class="container">
+      <a class="btn rounded-pill bg-primary" href="./FlappyBird/flappyBird.html"
+        >Play Game</a
+      >
+    </div>
 
     <!--Bootstrap-->
     <script
@@ -114,7 +118,5 @@
 
     <!--Custom-->
     <script src="./main.js"></script>
-
-    
   </body>
 </html>
